--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in 
 IEEE Trans. on Parallel and Distributed Systems (TPDS). Big Congrats! </span></p>
 
