--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), poster, 2019 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/, 2019  
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/1910.05433, 2019  
+<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-shaready.pdf">[paper]</a>
