--- a/publications_topics.html
+++ b/publications_topics.html
@@ -153,8 +153,11 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  <a href="paper/tpd
 
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Big Data Applications </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Big Data Applications and ML </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/1910.05433, 2019  
+<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> 
+</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
