--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Fog Orchestration and Simulation for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, in press </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Fog Orchestration and Simulation for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a> </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya,R. Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018 (SCI-IF = 2.929, Q1) <a href="paper/ieeecloud2018.pdf">[paper]</a>
