--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS). Big Congrats! </span></p
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$ I am currently the head of the scheduling topic at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK.   I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$ I am currently a research scientist at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. 
 We are presently working on employing intelligent software encompassing distributed scheduling, machine learning, hardware-software modeling, etc.to reshape the future of data center efficiency. 
 Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
-I has published more than 30 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems, IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
+I has published more than 35 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as Uni of Edinburgh, Lancaster Uni, Newcastle Uni upon Tyne, etc.). I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China  in June 2011 and January 2017 respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
@@ -186,11 +186,10 @@ I has published more than 30 peer-reviewed papers in the field of distributed sy
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1), CLOUD(1), etc. </span></p>
+~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1), SoCC(1), CLOUD(1), etc. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
-
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
 
@@ -200,9 +199,13 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya, R.Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale, IEEE Cloud Computing, 2018  </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019 </span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  ROSE: Cluster Resource Scheduling via Speculative Over-subscription, IEEE ICDCS 2018  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP 2017 (poster)  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale. VLDB 2014</span></p>
 
@@ -210,7 +213,6 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. Intelligent Resource Scheduling: a Machine Learning Perspective, IEEE SOSE 2018  </span></p>
 
 
 
