--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;   Play distributed systems to improve the efficiency and reliability: resource management, cluster scheduling, fault tolerance, dependability </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;   Play with data: system profiling, log analysis, data-driven optimization </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play with data: system profiling, log analysis and applied machine learning </span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
@@ -164,7 +164,7 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend</a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industry Experience  </span></p>
 
@@ -181,7 +181,7 @@ I has published more than 35 peer-reviewed papers in the field of distributed sy
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1), SoCC(1), CLOUD(1), etc. </span></p>
+~$ Highlight: TPDS(1), VLDB(1), ICDCS(1), TSC(2), DSN(1), LISA(1), SoCC(1), etc. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
@@ -209,8 +209,6 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, IEEE DSN 2016 </span></p>
 
 
-
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ Recent publications could be also found here:
 <a href="publications.html">[Complete List]</a> 
 <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[My DBLP]</a>
@@ -223,7 +221,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
 ~$ I have the opportunity to work closely with many institutes around the world and participate in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 program), Key Member, 2018.6 - present </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 program), Member, 2018.6 - present </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - 2018.5 </span></p>
 
@@ -249,9 +247,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  MSc. students: Shiqing Xue (2018.9-, Beihang Uni.) </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> Alumni </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Qi Shen (2017.9-2019, Postdoc researchers) 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Qi Shen (2017.9-2019.8, Postdoc researchers) 
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc, 2019.4-2019.9, Uni. of Leeds) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group)</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
@@ -274,45 +272,15 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong> Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;  <strong>&#8220;Excellent Academic Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University
 </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong> &#8220;Excellent Scientific Practice Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>&#8220;Excellent Scientific Practice Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   the 20th <strong>&quot;FengRu Cup&quot;</strong> Innovation Competition of Beihang University, Second Price</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   Excellence Student Scholarship of Beihang University</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   the 18th <strong>&quot;FengRu Cup&quot;</strong> Innovation Competition of Beihang University, Third Price</span></p>
-
-
-
-
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Friends and Collaborators </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="http://www.zhenyu.info" target="Dr. Zhenyu Wen"> Dr. Zhenyu Wen</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="http://act.buaa.edu.cn/cuilei" target="_blank">Dr. Lei Cui</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="https://tlin-tao-lin.github.io/" target="_blank"> Mr. Tao Lin</a> &nbsp;&nbsp;
-</span></p>
-
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="http://uk.linkedin.com/in/ismaelsm/" target="_blank">Dr. Ismael Solis Moreno</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="http://www.lancaster.ac.uk/scc/about-us/people/peter-garraghan" target="_blank">Dr. Peter Garraghan</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="https://scholar.google.com/citations?user=kKwo21wAAAAJ&hl=zh-CN" target="_blank">Dr. Xue Ouyang</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="http://www.paultownend.com/" target="_blank">Dr. Paul Townend</a>&nbsp;&nbsp;
-</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 
-<a href="https://sites.google.com/site/firmamentqj/" target="_blank">Dr. Jie Qin</a> &nbsp;&nbsp;
-&nbsp; &nbsp; 
-<a href="https://jiemingzhu.github.io" target="_blank">Dr. Jieming Zhu</a> &nbsp;&nbsp;
-</span></p>
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
